# hmls

./: .gitignore  LICENSE  README.md  history.json  map.json  pyproject.toml  squad_design.md
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/instructions/: packages-core.instructions.md  packages-networking.instructions.md  packages-nn.instructions.md  packages-ux.instructions.md
.github/prompts/: new-tank.prompt.md  training-config.prompt.md
.github/workflows/: basic-checks.yml  coverage.yml
docs/: ReadMe.md  playing.md  reinforcement_learning.md  squad_design.md
sample_configs/single_tanks/: README.md  config.json
sample_configs/single_tanks/weights/model_a/: model_config.json
sample_configs/single_tanks/weights/model_b/: model_config.json
sample_configs/single_tanks/weights/random_opponent/: model_config.json
scripts/: run_mypy.py
tests/: test_client_server_roundtrip.py  test_observer_integration.py  test_sample_configs.py
tmp/: train_config.json
tmp/player_a/: model.pt  model_config.json  reward_config.json
tmp/player_b/: model.pt  model_config.json  reward_config.json
