[project]
name = "hmls-workspace"
version = "0.0.0"
description = "Tank game AI experiments workspace"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "hmls-client",
    "hmls-core",
    "hmls-mapgenerator",
    "hmls-nncore",
    "hmls-observer",
    "hmls-protocol",
    "hmls-reinforcetrainer",
    "hmls-replayviewer",
    "hmls-server",
    "hmls-singlemki",
    "hmls-testharness",
    "hmls-uxcommon",
]

[tool.uv.sources]
hmls-client = { workspace = true }
hmls-core = { workspace = true }
hmls-mapgenerator = { workspace = true }
hmls-nncore = { workspace = true }
hmls-observer = { workspace = true }
hmls-protocol = { workspace = true }
hmls-reinforcetrainer = { workspace = true }
hmls-replayviewer = { workspace = true }
hmls-server = { workspace = true }
hmls-singlemki = { workspace = true }
hmls-testharness = { workspace = true }
hmls-uxcommon = { workspace = true }

[tool.ruff]
src = ["packages/*/src"]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
files = ["packages"]
mypy_path = "packages/hmls-core/src:packages/hmls-mapgenerator/src:packages/hmls-testharness/src:packages/hmls-uxcommon/src:packages/hmls-replayviewer/src:packages/hmls-protocol/src:packages/hmls-server/src:packages/hmls-client/src:packages/hmls-observer/src:packages/hmls-nncore/src:packages/hmls-singlemki/src:packages/hmls-reinforcetrainer/src"
plugins = ["pydantic.mypy"]
strict = true
explicit_package_bases = true
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["packages"]
