[project]
name = "hmls-workspace"
version = "0.0.0"
description = "Tank game AI experiments workspace"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "hmls-client",
    "hmls-core",
    "hmls-mapgenerator",
    "hmls-networking",
    "hmls-nncore",
    "hmls-observer",
    "hmls-protocol",
    "hmls-randomtank",
    "hmls-reinforcetrainer",
    "hmls-replayviewer",
    "hmls-server",
    "hmls-singlemki",
    "hmls-singlemkii",
    "hmls-singlemkiii",
    "hmls-testharness",
    "hmls-uxcommon",
]

[tool.uv.sources]
hmls-client = { workspace = true }
hmls-core = { workspace = true }
hmls-mapgenerator = { workspace = true }
hmls-networking = { workspace = true }
hmls-nncore = { workspace = true }
hmls-observer = { workspace = true }
hmls-protocol = { workspace = true }
hmls-randomtank = { workspace = true }
hmls-reinforcetrainer = { workspace = true }
hmls-replayviewer = { workspace = true }
hmls-server = { workspace = true }
hmls-singlemki = { workspace = true }
hmls-singlemkii = { workspace = true }
hmls-singlemkiii = { workspace = true }
hmls-testharness = { workspace = true }
hmls-uxcommon = { workspace = true }

[tool.ruff]
src = ["packages/*/src"]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "E",
    "EM",
    "F",
    "FAST",
    "G",
    "F401",  # unused-import
    "I", # unsorted-import
    "RUF022", # unsorted-dunderall
]

[tool.mypy]
files = ["packages"]
exclude = ["tests/"]
mypy_path = "packages/hmls-core/src:packages/hmls-mapgenerator/src:packages/hmls-testharness/src:packages/hmls-uxcommon/src:packages/hmls-replayviewer/src:packages/hmls-protocol/src:packages/hmls-server/src:packages/hmls-client/src:packages/hmls-observer/src:packages/hmls-networking/src:packages/hmls-nncore/src:packages/hmls-singlemki/src:packages/hmls-singlemkii/src:packages/hmls-singlemkiii/src:packages/hmls-randomtank/src:packages/hmls-reinforcetrainer/src"
plugins = ["pydantic.mypy"]
strict = true
explicit_package_bases = true
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = ["--import-mode=importlib"]
