[project]
name = "hmls-workspace"
version = "0.0.0"
description = "Tank game AI experiments workspace"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*", "packages/computerplayers/*", "packages/computerplayers/singletank/*", "packages/computerplayers/simplesquad/*"]
exclude = ["packages/computerplayers", "packages/computerplayers/singletank", "packages/computerplayers/simplesquad"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx2>=0.1",
    "hmls-client",
    "hmls-core",
    "hmls-mapgenerator",
    "hmls-networking",
    "hmls-nncore",
    "hmls-observer",
    "hmls-protocol",
    "hmls-randomtank",
    "hmls-reinforcetrainer",
    "hmls-replayviewer",
    "hmls-server",
    "hmls-simplesquadexecutor",
    "hmls-simplesquadplanner",
    "hmls-simplesquadplayer",
    "hmls-simplesquadtrainer",
    "hmls-singlemki",
    "hmls-singlemkii",
    "hmls-singlemkiii",
    "hmls-testharness",
    "hmls-uxcommon",
]

[tool.uv.sources]
hmls-client = { workspace = true }
hmls-core = { workspace = true }
hmls-mapgenerator = { workspace = true }
hmls-networking = { workspace = true }
hmls-nncore = { workspace = true }
hmls-observer = { workspace = true }
hmls-protocol = { workspace = true }
hmls-randomtank = { workspace = true }
hmls-reinforcetrainer = { workspace = true }
hmls-replayviewer = { workspace = true }
hmls-server = { workspace = true }
hmls-simplesquadexecutor = { workspace = true }
hmls-simplesquadplanner = { workspace = true }
hmls-simplesquadplayer = { workspace = true }
hmls-simplesquadtrainer = { workspace = true }
hmls-singlemki = { workspace = true }
hmls-singlemkii = { workspace = true }
hmls-singlemkiii = { workspace = true }
hmls-testharness = { workspace = true }
hmls-uxcommon = { workspace = true }

[tool.ruff]
src = ["packages/**/src"]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "E",
    "EM",
    "F",
    "FAST",
    "G",
    "F401",  # unused-import
    "I", # unsorted-import
    "PT",
    "PTH",
    "RUF022", # unsorted-dunderall
    "UP",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
python_version = "3.14"

[tool.coverage.run]
omit = ["packages/*/tests/*", "tests/*"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = ["--import-mode=importlib"]
timeout = 60
